--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -1,9 +1,12 @@
-<div 
-[ngClass] = "{
-	'bg-dark text-light' : darkTheme
-}" class="card" style="height: 100%;">
+<div
+  [ngClass]="{
+    'bg-dark text-light': darkTheme
+  }"
+  class="card"
+  style="height: 100%;"
+>
   <div class="card-header">
-    {{pageTitle}}
+    {{ pageTitle }}
   </div>
   <div class="card-body">
     <div class="container-fluid">
