--- a/src/app/modules/dish/components/profile-detail/profile-detail.component.html
+++ b/src/app/modules/dish/components/profile-detail/profile-detail.component.html
@@ -1,28 +1,26 @@
-<div class="card" *ngIf="currentUser">
-	<div class="card-body">
-		<div [ngClass] = "{'bg-dark text-light': darkTheme}" class="card">
-			<div class="card-header">Your Dishes</div>
-			<div class="card-body">
-				<ul class="list-group list-group-flush">
-    				<a
-    				*ngFor="let dish of userDishes$ | async"
-    				class="list-group-item list-group-item-action"
-    				[routerLink]="['/menu/', dish._id]">{{dish.name}}</a>
-  				</ul>
-			</div>
-		</div>
-		<div [ngClass] = "{'bg-dark text-light': darkTheme}" class="card mt-3">
-			<div class="card-header">Your Comments</div>
-			<div class="card-body">
-				<ul class="list-group list-group-flush">
-    				<li
-    				*ngFor="let comment of userComments$ | async"
-    				class="list-group-item list-group-item-action">{{comment.content}} <app-star
-					[rating]='comment.rating'
-					>
-				</app-star></li>
-  				</ul>
-			</div>
-		</div>
-	</div>
-</div>
+<mat-card *ngIf="currentUser">
+  <mat-card-content>
+    <mat-card [ngClass]="{ 'bg-dark text-light': darkTheme }">
+      <mat-card-title>Your Dishes</mat-card-title>
+      <mat-card-content>
+        <mat-nav-list>
+          <mat-list-item *ngFor="let dish of userDishes$ | async">
+            <a matLine [routerLink]="['/menu/', dish._id]">{{ dish.name }}</a>
+            <img matListAvatar [src]="dish.imageUrl" [alt]="dish.name" />
+          </mat-list-item>
+        </mat-nav-list>
+      </mat-card-content>
+    </mat-card>
+    <mat-card [ngClass]="{ 'bg-dark text-light': darkTheme }" class="mt-3">
+      <mat-card-title>Your Comments</mat-card-title>
+      <mat-card-content>
+        <mat-nav-list>
+          <mat-list-item *ngFor="let comment of userComments$ | async">
+            <a matLine> {{ comment.content }}</a>
+            <app-star [rating]="comment.rating"> </app-star>
+          </mat-list-item>
+        </mat-nav-list>
+      </mat-card-content>
+    </mat-card>
+  </mat-card-content>
+</mat-card>
