--- a/src/app/modules/user/components/login/login.component.html
+++ b/src/app/modules/user/components/login/login.component.html
@@ -1,24 +1,50 @@
-<div [ngClass] = "{'bg-dark text-light': darkTheme}" class="card">
-	<div class="card-header">
-		LOGIN
-	</div>
-	<div class="card-body">
-		<form #loginForm = "ngForm" (ngSubmit)="onSubmit(loginForm)">
-			<div class="form-group mt-3 mb-3">
-				<label for="email">Email:</label>
-				<input name="email" type="email" id="email" class="form-control" [(ngModel)]="email" required #emailField = "ngModel">
-			</div>
-			<div *ngIf="emailField.invalid && emailField.touched" class="alert alert-danger">Please enter email</div>
-			<div class="form-group mb-3">
-				<label for="password">Password:</label>
-				<input minlength="4" name="password" type="password" id="password" class="form-control" [(ngModel)]="password" required #passwordField = "ngModel">
-			</div>
-			<div *ngIf="passwordField.invalid && passwordField.touched" class="alert alert-danger">Password should be atleast 4 characters long</div>
-			<div *ngIf="error$ | async as error" class="alert alert-danger alert-dismissible">
-				<button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-				{{error}}
-			</div>
-			<button type="submit" class="btn btn-primary">Login</button>
-		</form>
-	</div>
-</div>
+<mat-card [ngClass]="{ 'bg-dark text-light': darkTheme }">
+  <mat-card-title>LOGIN</mat-card-title>
+  <mat-card-content>
+    <form #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)">
+      <mat-form-field style="width: 100%;" appearance="fill">
+        <mat-label>Email</mat-label>
+        <input
+          matInput
+          name="email"
+          type="email"
+          id="email"
+          [(ngModel)]="email"
+          required
+          #emailField="ngModel"
+        />
+        <mat-error *ngIf="emailField.invalid && emailField.touched">
+          Email is required
+        </mat-error>
+      </mat-form-field>
+      <mat-form-field style="width: 100%;" appearance="fill">
+        <mat-label>Password</mat-label>
+        <input
+          matInput
+          minlength="4"
+          name="password"
+          type="password"
+          id="password"
+          [(ngModel)]="password"
+          required
+          #passwordField="ngModel"
+        />
+        <mat-error *ngIf="passwordField.invalid && passwordField.touched">
+          Password should be atleast 4 characters long
+        </mat-error>
+      </mat-form-field>
+      <div
+        *ngIf="error$ | async as error"
+        class="alert alert-danger alert-dismissible"
+      >
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="alert"
+        ></button>
+        {{ error }}
+      </div>
+      <button mat-raised-button type="submit" color="primary">Login</button>
+    </form>
+  </mat-card-content>
+</mat-card>
