testing added to some files

--- a/src/app/modules/dish/components/add-dish/add-dish.component.html
+++ b/src/app/modules/dish/components/add-dish/add-dish.component.html
@@ -63,7 +63,7 @@
         <mat-select
           type="text"
           id="mat-label"
-          name="mat-label"
+          name="label"
           [(ngModel)]="currentDish.label"
           required
           #labelField="ngModel"
