--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -1,23 +1,24 @@
 <div
-  [ngClass]="{
-    'bg-dark text-light': darkTheme
-  }"
-  class="card"
-  style="height: 100%;"
->
-  <div class="card-header">
-    {{ pageTitle }}
-  </div>
-  <div class="card-body">
-    <div class="container-fluid">
-      <div class="text-center">Developed by:</div>
-      <div class="text-center">
-        <h3>Ritik Singla</h3>
-      </div>
-      <div class="text-center">@ritiksingla</div>
-      <div class="text-center">
-        <a class="nav-link" href="https://www.github.com/ritiksingla">GitHub</a>
-      </div>
-    </div>
-  </div>
+	[ngClass]="{
+		'bg-dark text-light': darkTheme
+	}"
+	class="card"
+	style="height: 100%">
+	<div class="card-header">
+		{{ pageTitle }}
+	</div>
+	<div class="card-body">
+		<div class="container-fluid">
+			<div class="text-center">Developed by:</div>
+			<div class="text-center">
+				<h3>Ritik Singla</h3>
+			</div>
+			<div class="text-center">@ritiksingla</div>
+			<div class="text-center">
+				<a class="nav-link" href="https://www.github.com/ritiksingla"
+					>GitHub</a
+				>
+			</div>
+		</div>
+	</div>
 </div>
