--- a/src/app/modules/dish/components/dish-detail/dish-detail.component.html
+++ b/src/app/modules/dish/components/dish-detail/dish-detail.component.html
@@ -1,131 +1,130 @@
 <div class="mt-5" *ngIf="dishCommentsWithAuthors$ | async as dish">
-  <!-- dish -->
-  <mat-card
-    [ngClass]="{
-      'bg-dark text-light': darkTheme,
-      'mb-3': true
-    }"
-    style="max-width: 400px;"
-  >
-    <mat-card-header>
-      <mat-card-title>{{ dish.name | uppercase }}</mat-card-title>
-      <mat-card-subtitle>{{ dish.category | uppercase }}</mat-card-subtitle>
-    </mat-card-header>
-    <img mat-card-image [src]="dish.imageUrl" />
-    <mat-card-content>
-      <p>{{ dish.description }}</p>
-    </mat-card-content>
-    <mat-card-actions>
-      <button
-        mat-button
-        color="primary"
-        aria-label="navigate back icon"
-        (click)="onBack()"
-      >
-        <mat-icon>arrow_back_ios</mat-icon>
-      </button>
-      <button
-        *ngIf="currentUser._id == dish.user._id"
-        mat-button
-        color="warn"
-        aria-label="delete dish icon"
-        (click)="onDelete(dish?._id)"
-      >
-        <mat-icon>delete</mat-icon>
-      </button>
-      <button
-        *ngIf="currentUser._id == dish.user._id"
-        mat-button
-        color="primary"
-        aria-label="edit dish icon"
-        (click)="onEdit(dish)"
-      >
-        <mat-icon>edit</mat-icon>
-      </button>
-    </mat-card-actions>
-    <!-- <mat-card-footer>
+	<!-- dish -->
+	<mat-card
+		[ngClass]="{
+			'bg-dark text-light': darkTheme,
+			'mb-3': true
+		}"
+		style="max-width: 400px">
+		<mat-card-header>
+			<mat-card-title>{{ dish.name | uppercase }}</mat-card-title>
+			<mat-card-subtitle>{{
+				dish.category | uppercase
+			}}</mat-card-subtitle>
+		</mat-card-header>
+		<img mat-card-image [src]="dish.imageUrl" />
+		<mat-card-content>
+			<p>{{ dish.description }}</p>
+		</mat-card-content>
+		<mat-card-actions>
+			<button
+				mat-button
+				color="primary"
+				aria-label="navigate back icon"
+				(click)="onBack()">
+				<mat-icon>arrow_back_ios</mat-icon>
+			</button>
+			<button
+				*ngIf="currentUser._id === dish.user._id"
+				mat-button
+				color="warn"
+				aria-label="delete dish icon"
+				(click)="onDelete(dish?._id)">
+				<mat-icon>delete</mat-icon>
+			</button>
+			<button
+				*ngIf="currentUser._id === dish.user._id"
+				mat-button
+				color="primary"
+				aria-label="edit dish icon"
+				(click)="onEdit(dish)">
+				<mat-icon>edit</mat-icon>
+			</button>
+		</mat-card-actions>
+		<!-- <mat-card-footer>
       <div class="d-flex justify-content-between">
         <span>{{ dish.price | currency: 'USD':'symbol':'1.2-2' }}</span>
       </div>
     </mat-card-footer> -->
-  </mat-card>
+	</mat-card>
 
-  <!-- comments -->
-  <div>
-    <!-- previous comments -->
-    <div *ngIf="dish.comments.length">
-      <mat-card
-        *ngFor="let comment of dish.comments"
-        [ngClass]="{ 'bg-dark text-light': darkTheme }"
-        class="mb-3"
-      >
-        <mat-card-header class="d-flex justify-content-around">
-          <button
-            mat-button
-            *ngIf="currentUser._id == comment.author._id"
-            color="primary"
-            (click)="onEditComment(comment)"
-          >
-            <mat-icon>edit</mat-icon>
-          </button>
-          <mat-card-subtitle
-            >by {{ comment.author.first_name | capitalize }}
-            {{ comment.author.last_name | capitalize }}
-          </mat-card-subtitle>
-          <button
-            mat-button
-            *ngIf="currentUser._id == comment.author._id"
-            color="warn"
-            (click)="onDeleteComment(comment)"
-          >
-            <mat-icon>delete</mat-icon>
-          </button>
-        </mat-card-header>
-        <mat-card-content>
-          <p>{{ comment.content }}</p>
-          <div class="d-flex justify-content-between align-items-baseline">
-            <p>{{ comment.createdAt | date: 'medium' }}</p>
-            <app-star matBadge="{{ comment.rating }}" [rating]="comment.rating">
-            </app-star>
-          </div>
-        </mat-card-content>
-      </mat-card>
-    </div>
+	<!-- comments -->
+	<div>
+		<!-- previous comments -->
+		<div *ngIf="dish.comments.length">
+			<mat-card
+				*ngFor="let comment of dish.comments"
+				[ngClass]="{ 'bg-dark text-light': darkTheme }"
+				class="mb-3">
+				<mat-card-header class="d-flex justify-content-around">
+					<button
+						mat-button
+						*ngIf="currentUser._id === comment.author._id"
+						color="primary"
+						(click)="onEditComment(comment)">
+						<mat-icon>edit</mat-icon>
+					</button>
+					<mat-card-subtitle
+						>by {{ comment.author.first_name | capitalize }}
+						{{ comment.author.last_name | capitalize }}
+					</mat-card-subtitle>
+					<button
+						mat-button
+						*ngIf="currentUser._id === comment.author._id"
+						color="warn"
+						(click)="onDeleteComment(comment)">
+						<mat-icon>delete</mat-icon>
+					</button>
+				</mat-card-header>
+				<mat-card-content>
+					<p>{{ comment.content }}</p>
+					<div
+						class="d-flex justify-content-between align-items-baseline">
+						<p>{{ comment.createdAt | date: 'medium' }}</p>
+						<app-star
+							matBadge="{{ comment.rating }}"
+							[rating]="comment.rating">
+						</app-star>
+					</div>
+				</mat-card-content>
+			</mat-card>
+		</div>
 
-    <!-- new comment -->
-    <mat-card [ngClass]="{ 'bg-dark text-light': darkTheme }">
-      <mat-card-title>Make Comment </mat-card-title>
-      <mat-card-content>
-        <mat-form-field style="width: 100%;" appearance="fill">
-          <mat-label>Content</mat-label>
-          <textarea
-            matInput
-            id="comment_content"
-            name="comment_content"
-            [(ngModel)]="comment_content"
-            required
-          ></textarea>
-        </mat-form-field>
-        <mat-form-field style="width: 100%;" appearance="fill">
-          <mat-label>Rating</mat-label>
-          <mat-select
-            matNativeControl
-            required
-            id="comment_rating"
-            name="comment_rating"
-            [(ngModel)]="comment_rating"
-          >
-            <mat-option value="1">1</mat-option>
-            <mat-option value="2">2</mat-option>
-            <mat-option value="3">3</mat-option>
-            <mat-option value="4">4</mat-option>
-            <mat-option value="5">5</mat-option>
-          </mat-select>
-        </mat-form-field>
-        <button mat-raised-button (click)="addComment(dish)" color="primary">
-          POST
-        </button>
-      </mat-card-content>
-    </mat-card>
-  </div>
+		<!-- new comment -->
+		<mat-card [ngClass]="{ 'bg-dark text-light': darkTheme }">
+			<mat-card-title>Make Comment </mat-card-title>
+			<mat-card-content>
+				<mat-form-field style="width: 100%" appearance="fill">
+					<mat-label>Content</mat-label>
+					<textarea
+						matInput
+						id="comment_content"
+						name="comment_content"
+						[(ngModel)]="comment_content"
+						required></textarea>
+				</mat-form-field>
+				<mat-form-field style="width: 100%" appearance="fill">
+					<mat-label>Rating</mat-label>
+					<mat-select
+						matNativeControl
+						required
+						id="comment_rating"
+						name="comment_rating"
+						[(ngModel)]="comment_rating">
+						<mat-option value="1">1</mat-option>
+						<mat-option value="2">2</mat-option>
+						<mat-option value="3">3</mat-option>
+						<mat-option value="4">4</mat-option>
+						<mat-option value="5">5</mat-option>
+					</mat-select>
+				</mat-form-field>
+				<button
+					mat-raised-button
+					(click)="addComment(dish)"
+					color="primary">
+					POST
+				</button>
+			</mat-card-content>
+		</mat-card>
+	</div>
 </div>
