--- a/src/app/modules/dish/components/menu/menu.component.html
+++ b/src/app/modules/dish/components/menu/menu.component.html
@@ -1,37 +1,38 @@
 <div class="row mb-2">
-  <div class="col-md-2">Find by name:</div>
-  <div class="col-md-4">
-    <input class="form-control" type="text" (input)="onFilterChange($event)" />
-  </div>
+	<div class="col-md-2">Find by name:</div>
+	<div class="col-md-4">
+		<input
+			class="form-control"
+			type="text"
+			(input)="onFilterChange($event)" />
+	</div>
 </div>
 
 <table
-  mat-table
-  [dataSource]="filteredDishes$"
-  class="mat-elevation-z8"
-  style="width: 100%;"
->
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef>Name</th>
-    <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-  </ng-container>
-  <ng-container matColumnDef="category">
-    <th mat-header-cell *matHeaderCellDef>Category</th>
-    <td mat-cell *matCellDef="let element">{{ element.category }}</td>
-  </ng-container>
-  <ng-container matColumnDef="price">
-    <th mat-header-cell *matHeaderCellDef>Price</th>
-    <td mat-cell *matCellDef="let element">{{ element.price }}</td>
-  </ng-container>
-  <ng-container matColumnDef="description">
-    <th mat-header-cell *matHeaderCellDef>Description</th>
-    <td mat-cell *matCellDef="let element">{{ element.description }}</td>
-  </ng-container>
+	mat-table
+	[dataSource]="filteredDishes$"
+	class="mat-elevation-z8"
+	style="width: 100%">
+	<ng-container matColumnDef="name">
+		<th mat-header-cell *matHeaderCellDef>Name</th>
+		<td mat-cell *matCellDef="let element">{{ element.name }}</td>
+	</ng-container>
+	<ng-container matColumnDef="category">
+		<th mat-header-cell *matHeaderCellDef>Category</th>
+		<td mat-cell *matCellDef="let element">{{ element.category }}</td>
+	</ng-container>
+	<ng-container matColumnDef="price">
+		<th mat-header-cell *matHeaderCellDef>Price</th>
+		<td mat-cell *matCellDef="let element">{{ element.price }}</td>
+	</ng-container>
+	<ng-container matColumnDef="description">
+		<th mat-header-cell *matHeaderCellDef>Description</th>
+		<td mat-cell *matCellDef="let element">{{ element.description }}</td>
+	</ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr
-    mat-row
-    *matRowDef="let row; columns: displayedColumns"
-    (click)="onDishClicked(row)"
-  ></tr>
+	<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+	<tr
+		mat-row
+		*matRowDef="let row; columns: displayedColumns"
+		(click)="onDishClicked(row)"></tr>
 </table>
