--- a/src/app/modules/dish/components/profile-detail/profile-detail.component.html
+++ b/src/app/modules/dish/components/profile-detail/profile-detail.component.html
@@ -1,26 +1,32 @@
 <mat-card *ngIf="currentUser">
-  <mat-card-content>
-    <mat-card [ngClass]="{ 'bg-dark text-light': darkTheme }">
-      <mat-card-title>Your Dishes</mat-card-title>
-      <mat-card-content>
-        <mat-nav-list>
-          <mat-list-item *ngFor="let dish of userDishes$ | async">
-            <a matLine [routerLink]="['/menu/', dish._id]">{{ dish.name }}</a>
-            <img matListAvatar [src]="dish.imageUrl" [alt]="dish.name" />
-          </mat-list-item>
-        </mat-nav-list>
-      </mat-card-content>
-    </mat-card>
-    <mat-card [ngClass]="{ 'bg-dark text-light': darkTheme }" class="mt-3">
-      <mat-card-title>Your Comments</mat-card-title>
-      <mat-card-content>
-        <mat-nav-list>
-          <mat-list-item *ngFor="let comment of userComments$ | async">
-            <a matLine> {{ comment.content }}</a>
-            <app-star [rating]="comment.rating"> </app-star>
-          </mat-list-item>
-        </mat-nav-list>
-      </mat-card-content>
-    </mat-card>
-  </mat-card-content>
+	<mat-card-content>
+		<mat-card [ngClass]="{ 'bg-dark text-light': darkTheme }">
+			<mat-card-title>Your Dishes</mat-card-title>
+			<mat-card-content>
+				<mat-nav-list>
+					<mat-list-item *ngFor="let dish of userDishes$ | async">
+						<a matLine [routerLink]="['/menu/', dish._id]">{{
+							dish.name
+						}}</a>
+						<img
+							matListAvatar
+							[src]="dish.imageUrl"
+							[alt]="dish.name" />
+					</mat-list-item>
+				</mat-nav-list>
+			</mat-card-content>
+		</mat-card>
+		<mat-card [ngClass]="{ 'bg-dark text-light': darkTheme }" class="mt-3">
+			<mat-card-title>Your Comments</mat-card-title>
+			<mat-card-content>
+				<mat-nav-list>
+					<mat-list-item
+						*ngFor="let comment of userComments$ | async">
+						<a matLine> {{ comment.content }}</a>
+						<app-star [rating]="comment.rating"> </app-star>
+					</mat-list-item>
+				</mat-nav-list>
+			</mat-card-content>
+		</mat-card>
+	</mat-card-content>
 </mat-card>
