--- a/src/app/modules/dish/components/profile/profile.component.html
+++ b/src/app/modules/dish/components/profile/profile.component.html
@@ -1,61 +1,51 @@
 <nav
-  [ngClass]="{
-    'navbar navbar-expand mb-3': true,
-    'navbar-light bg-light': darkTheme == false,
-    'navbar-dark bg-dark': darkTheme
-  }"
->
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand"
-        >Welcome {{ currentUser.first_name }} {{ currentUser.last_name }}</a
-      >
-    </div>
-    <ul
-      class="
-        list-unstyled
-        d-flex
-        justify-content-between
-        align-items-baseline
-        gap-5
-      "
-    >
-      <li>
-        <button
-          mat-icon-button
-          color="primary"
-          routerLink="detail"
-          routerLinkActive="active"
-        >
-          <mat-icon>info</mat-icon>
-        </button>
-      </li>
+	[ngClass]="{
+		'navbar navbar-expand mb-3': true,
+		'navbar-light bg-light': darkTheme === false,
+		'navbar-dark bg-dark': darkTheme
+	}">
+	<div class="container-fluid">
+		<div class="navbar-header">
+			<a class="navbar-brand"
+				>Welcome {{ currentUser.first_name }}
+				{{ currentUser.last_name }}</a
+			>
+		</div>
+		<ul
+			class="list-unstyled d-flex justify-content-between align-items-baseline gap-5">
+			<li>
+				<button
+					mat-icon-button
+					color="primary"
+					routerLink="detail"
+					routerLinkActive="active">
+					<mat-icon>info</mat-icon>
+				</button>
+			</li>
 
-      <li>
-        <button
-          mat-icon-button
-          color="primary"
-          routerLink="edit"
-          routerLinkActive="active"
-        >
-          <mat-icon>edit</mat-icon>
-        </button>
-      </li>
+			<li>
+				<button
+					mat-icon-button
+					color="primary"
+					routerLink="edit"
+					routerLinkActive="active">
+					<mat-icon>edit</mat-icon>
+				</button>
+			</li>
 
-      <li>
-        <button
-          mat-icon-button
-          color="primary"
-          routerLink="detail"
-          routerLinkActive="active"
-          (click)="logout()"
-        >
-          <mat-icon>logout</mat-icon>
-        </button>
-      </li>
-    </ul>
-  </div>
+			<li>
+				<button
+					mat-icon-button
+					color="primary"
+					routerLink="detail"
+					routerLinkActive="active"
+					(click)="logout()">
+					<mat-icon>logout</mat-icon>
+				</button>
+			</li>
+		</ul>
+	</div>
 </nav>
 <div class="container">
-  <router-outlet></router-outlet>
+	<router-outlet></router-outlet>
 </div>
