--- a/src/app/modules/shared/components/star.component.html
+++ b/src/app/modules/shared/components/star.component.html
@@ -1,9 +1,9 @@
 <div class="mask" [style.width.px]="starWidth">
-  <div style="width: 75px;">
-    <span class="fa fa-star"></span>
-    <span class="fa fa-star"></span>
-    <span class="fa fa-star"></span>
-    <span class="fa fa-star"></span>
-    <span class="fa fa-star"></span>
-  </div>
+	<div style="width: 75px">
+		<span class="fa fa-star"></span>
+		<span class="fa fa-star"></span>
+		<span class="fa fa-star"></span>
+		<span class="fa fa-star"></span>
+		<span class="fa fa-star"></span>
+	</div>
 </div>
